--- a/CPSP/config/test.yaml
+++ b/CPSP/config/test.yaml
@@ -1,5 +1,5 @@
 # training args
-seed: 123
+seed: 519
 lr: 0.001
 snapshot_pref: "./TestExps/Avel/"
 batch_size: 64
@@ -11,7 +11,7 @@ resume: ""    # path to latest checkpoint
 
 # dataset args
 dataset_name: "dy"
-category_num: 86
+category_num: 10
 vis_fea_type: "vgg"
 
 # model args
@@ -34,12 +34,12 @@ scon_flag: True
 lambda_scon: 0.01
 
 # addtional
-data_root: "dataset/feature/features/"
-meta_root: "dataset/csvfiles/"
+data_root: "/data1/yyp/AVEL/generalization_exp_data/pm_selected/features"
+meta_root: "/data1/cy/nips/dataset/csvfiles/"
 ave: False
 avepm: True
-is_select: False
+is_select: True
 audio_preprocess_mode: "None"
 preprocess: "None"
-a_feature_root: "dataset/feature/preprocess_audio_feature"
+a_feature_root: "/data1/lwy/ave-pm-dataset/data/"
 v_feature_root: "dataset/feature/preprocess_visual_feature"
